  then the input will not be echoed (as for a password).  From Dirceu
  Pereira Tiegs.

* Added a method
  ``paste.script.appinstall.Installer.template_renderer``, which can
  be used to override template substitution with ``paster
  make-config``.  The function is similar to the same function used
  with ``paster create`` templates.

1.3.6
-----

* CherryPy wsgiserver updated to the 3.0.2 release's

* paster no longer hides ``pkg_resources.DistributionNotFound`` error
  messages describing the target project's requirements. Aids the
  somewhat confusing "did you run setup.py develop?" message when it had
  already been ran, but since then had a requirement added that wasn't
  installed.

* Logging configuration is now read from the config file during ``paster
  setup-app``.

* Custom Formatters and Handlers (Handlers outside of the logging module)
  are now supported in logging configuration files.

1.3.5
-----

* Initialize logging earlier in the serve command for components that want
  to utilize it. Patch from Christopher Lenz.

* Fixed Python 2.3 incompatibility (no ``string.Template``) in
  ``paste.script.appinstall``.

1.3.4
-----

* Make sure that when using ``--monitor`` or ``--reload``, if the
  parent monitoring process dies, also kill the subprocess.
* When using ``paster serve --log-file``, append to the log file (was
  truncating any previous contents).

* Read logging information from the server file, using the logging module's
  `standard configuration format
  <http://python.org/doc/current/lib/logging-config-fileformat.html>`_

* When adding files don't fail because an svn command fails.  Helpful
  particularly on Windows, when the svn command-line isn't installed
  (e.g., using TortoiseSVN).

1.3.3
-----

* Fixed problem with ``paster serve`` on Windows.  Also on Windows,
  fixed issue with executables with spaces in their names (this case
  requires the ``win32all`` module).

* You can use ``+dot+`` in your project template filenames,